--- a/ScoutLanguageResources/LanguageResources/zh-CN.resx
+++ b/ScoutLanguageResources/LanguageResources/zh-CN.resx
@@ -1319,8 +1319,11 @@
   <data name="LID_Label_Led" xml:space="preserve">
     <value>LED</value>
   </data>
-  <data name="LID_Title_ViCell_Name" xml:space="preserve">
+  <data name="LID_Title_ViCell_BLU_Name" xml:space="preserve">
     <value>Vi-CELL BLU</value>
+  </data>
+  <data name="LID_Title_ViCell_GO_Name" xml:space="preserve">
+    <value>Vi-CELL GO</value>
   </data>
   <data name="LID_Label_AvgDiameter" xml:space="preserve">
     <value>平均直径</value>
